fix err send files, make friend from other devices

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 #sqlserver 
 driverName = com.microsoft.sqlserver.jdbc.SQLServerDriver
-server = jdbc:sqlserver://DESKTOP-0NKDULM\\SQLEXPRESS:1433
+server = jdbc:sqlserver://KHANHQUI\\SQLEXPRESS:1433
 databaseName = chatapp
 user = mylogin
-password = Long2000!@#$
+password = mylogin
