--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vscode
 
 # Created by https://www.toptal.com/developers/gitignore/api/git,java,maven,eclipse,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,java,maven,eclipse,windows
