Move leetcode repo to this

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .vscode
+test.py
 
 # Created by https://www.toptal.com/developers/gitignore/api/git,java,maven,eclipse,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,java,maven,eclipse,windows
