--- a/016-nested-comments/tsconfig.json
+++ b/016-nested-comments/tsconfig.json
@@ -16,6 +16,9 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@prisma/*": ["generated/prisma/*"]
+    }
   }
 }
